--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
+                <button class="menu-btn" id="menu-close">
+                    <i class='bx bx-log-out-circle' ></i>
+                </button>
                 <i class='bx bx-pulse'></i>
                 <a href="#">YouJam</a>
             </div>
@@ -103,6 +106,9 @@
         <main>
             <header>
                 <div class="nav-links">
+                    <button class="menu-btn" id="menu-open">
+                        <i class='bx bx-food-menu' ></i>
+                    </button>
                     <a href="#">Music</a>
                     <a href="#">Live</a>
                     <a href="#">Podcast</a>
