added auth routes for both backend and spotify appear to be working in tests

--- a/public/index.html
+++ b/public/index.html
@@ -306,7 +306,8 @@
             </div>
         </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
+    <script src="spotify.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
