--- a/public/genres.html
+++ b/public/genres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="genres.css">
     <title>Music Player Platform</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                     </li>
                     <li>
                         <i class='bx bxs-music' ></i>
-                        <a href="/genres">Genres</a>
+                        <a href="#">Genres</a>
                     </li>
                     <li>
                         <i class='bx bxs-album' ></i>
@@ -118,27 +118,11 @@
 
             </header>
 
-            <div class="trending">
-                <div class="left">
-                    <h5>Trending Now!</h5>
-                    <div class="info">
-                        <h2>Empty Space</h2>
-                        <h4>James Arthur</h4>
-                        <h5>74 Million Plays</h5>
-                        <div class="buttons">
-                            <button>Listen Now</button>
-                            <i class='bx bxs-heart' ></i>
-                        </div>
-                    </div>
-                </div>
-                <img src="assets/trend.png">
-            </div>
 
             <div class="playlist">
                 <div class="genres">
                     <div class="header">
                         <h5>Genres</h5>
-                        <a href="/genres">View more</a>
                     </div>
 
                     <div class="items">
@@ -160,90 +144,46 @@
                         <div class="item">
                             <p>Country<br>Pop</p>
                         </div>
+                        <div class="item">
+                            <p>Alternative<br>Country</p>
+                        </div>
+                        <div class="item">
+                            <p>Blues<br>Country</p>
+                        </div>
+                        <div class="item">
+                            <p>Country<br>Rap</p>
+                        </div>
+                        <div class="item">
+                            <p>Country<br>Soul</p>
+                        </div>
+                        <div class="item">
+                            <p>Country<br>Rock</p>
+                        </div>
+                        <div class="item">
+                            <p>Country<br>Pop</p>
+                        </div>
+                        <div class="item">
+                            <p>Alternative<br>Country</p>
+                        </div>
+                        <div class="item">
+                            <p>Blues<br>Country</p>
+                        </div>
+                        <div class="item">
+                            <p>Country<br>Rap</p>
+                        </div>
+                        <div class="item">
+                            <p>Country<br>Soul</p>
+                        </div>
+                        <div class="item">
+                            <p>Country<br>Rock</p>
+                        </div>
+                        <div class="item">
+                            <p>Country<br>Pop</p>
+                        </div>
                     </div>
 
                 </div>
-
-                <div class="music-list">
-                    <div class="header">
-                        <h5>Top Songs</h5>
-                        <a href="/topSongs">View more</a>
-                    </div>
-
-                
-                <div class="items">
-                    <div class="item">
-                        <div class="info">
-                            <p>01</p>
-                            <img src="assets/song-1.png">
-                            <div class="details">
-                                <h5>Cover Me Up</h5>
-                                <p>Morgan Wallen</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:45</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>02</p>
-                            <img src="assets/song-2.png">
-                            <div class="details">
-                                <h5>Cosmic Love</h5>
-                                <p>Florence and the Machine</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>05:30</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>03</p>
-                            <img src="assets/song-3.png">
-                            <div class="details">
-                                <h5>No Guidance</h5>
-                                <p>Chris Brown</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>04:12</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>04</p>
-                            <img src="assets/song-4.png">
-                            <div class="details">
-                                <h5>Halo</h5>
-                                <p>Beyonce</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:10</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
+            </div>    
         </main>
 
         <div class="right-section">
@@ -303,7 +243,5 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
-    <script src="spotify.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
