added the beginning of general music finding pathway. Styling and images added to genre section.

--- a/public/index.html
+++ b/public/index.html
@@ -105,9 +105,9 @@
                     <button class="menu-btn" id="menu-open">
                         <i class='bx bx-food-menu' ></i>
                     </button>
-                    <a href="#">Studio</a>
-                    <a href="#">Live</a>
-                    <a href="#">Covers</a>
+                    <a href="/country">Male</a>
+                    <a href="/country">Female</a>
+                    <a href="/country">Collab</a>
                 </div>
 
                 <div class="search">
@@ -241,9 +241,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
+        </div>
         </main>
 
         <div class="right-section">
