--- a/public/topSongs.html
+++ b/public/topSongs.html
@@ -105,9 +105,9 @@
                     <button class="menu-btn" id="menu-open">
                         <i class='bx bx-food-menu' ></i>
                     </button>
-                    <a href="#">Studio</a>
-                    <a href="#">Live</a>
-                    <a href="#">Covers</a>
+                    <a href="/country">Male</a>
+                    <a href="/country">Female</a>
+                    <a href="/country">Collab</a>
                 </div>
 
                 <div class="search">
@@ -145,109 +145,109 @@
                     </div>
                     <div class="item">
                         <div class="info">
-                            <p>01</p>
-                            <img src="assets/song-1.png">
-                            <div class="details">
-                                <h5>Cover Me Up</h5>
-                                <p>Morgan Wallen</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:45</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>01</p>
-                            <img src="assets/song-1.png">
-                            <div class="details">
-                                <h5>Cover Me Up</h5>
-                                <p>Morgan Wallen</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:45</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>01</p>
-                            <img src="assets/song-1.png">
-                            <div class="details">
-                                <h5>Cover Me Up</h5>
-                                <p>Morgan Wallen</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:45</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>01</p>
-                            <img src="assets/song-1.png">
-                            <div class="details">
-                                <h5>Cover Me Up</h5>
-                                <p>Morgan Wallen</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:45</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>01</p>
-                            <img src="assets/song-1.png">
-                            <div class="details">
-                                <h5>Cover Me Up</h5>
-                                <p>Morgan Wallen</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:45</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <p>01</p>
-                            <img src="assets/song-1.png">
-                            <div class="details">
-                                <h5>Cover Me Up</h5>
-                                <p>Morgan Wallen</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <p>03:45</p>
-                            <div class="icon">
-                                <i class='bx bxs-right-arrow' ></i>
-                            </div>
-                            <i class='bx bxs-plus-square' ></i>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="info">
                             <p>02</p>
+                            <img src="assets/song-1.png">
+                            <div class="details">
+                                <h5>Cover Me Up</h5>
+                                <p>Morgan Wallen</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <p>03:45</p>
+                            <div class="icon">
+                                <i class='bx bxs-right-arrow' ></i>
+                            </div>
+                            <i class='bx bxs-plus-square' ></i>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <p>03</p>
+                            <img src="assets/song-1.png">
+                            <div class="details">
+                                <h5>Cover Me Up</h5>
+                                <p>Morgan Wallen</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <p>03:45</p>
+                            <div class="icon">
+                                <i class='bx bxs-right-arrow' ></i>
+                            </div>
+                            <i class='bx bxs-plus-square' ></i>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <p>04</p>
+                            <img src="assets/song-1.png">
+                            <div class="details">
+                                <h5>Cover Me Up</h5>
+                                <p>Morgan Wallen</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <p>03:45</p>
+                            <div class="icon">
+                                <i class='bx bxs-right-arrow' ></i>
+                            </div>
+                            <i class='bx bxs-plus-square' ></i>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <p>05</p>
+                            <img src="assets/song-1.png">
+                            <div class="details">
+                                <h5>Cover Me Up</h5>
+                                <p>Morgan Wallen</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <p>03:45</p>
+                            <div class="icon">
+                                <i class='bx bxs-right-arrow' ></i>
+                            </div>
+                            <i class='bx bxs-plus-square' ></i>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <p>06</p>
+                            <img src="assets/song-1.png">
+                            <div class="details">
+                                <h5>Cover Me Up</h5>
+                                <p>Morgan Wallen</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <p>03:45</p>
+                            <div class="icon">
+                                <i class='bx bxs-right-arrow' ></i>
+                            </div>
+                            <i class='bx bxs-plus-square' ></i>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <p>07</p>
+                            <img src="assets/song-1.png">
+                            <div class="details">
+                                <h5>Cover Me Up</h5>
+                                <p>Morgan Wallen</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <p>03:45</p>
+                            <div class="icon">
+                                <i class='bx bxs-right-arrow' ></i>
+                            </div>
+                            <i class='bx bxs-plus-square' ></i>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <p>08</p>
                             <img src="assets/song-2.png">
                             <div class="details">
                                 <h5>Cosmic Love</h5>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="item">
                         <div class="info">
-                            <p>03</p>
+                            <p>09</p>
                             <img src="assets/song-3.png">
                             <div class="details">
                                 <h5>No Guidance</h5>
@@ -281,7 +281,7 @@
                     </div>
                     <div class="item">
                         <div class="info">
-                            <p>04</p>
+                            <p>10</p>
                             <img src="assets/song-4.png">
                             <div class="details">
                                 <h5>Halo</h5>
