--- a/public/genres.html
+++ b/public/genres.html
@@ -105,9 +105,9 @@
                     <button class="menu-btn" id="menu-open">
                         <i class='bx bx-food-menu' ></i>
                     </button>
-                    <a href="#">Studio</a>
-                    <a href="#">Live</a>
-                    <a href="#">Covers</a>
+                    <a href="/country">Male</a>
+                    <a href="/country">Female</a>
+                    <a href="/country">Collab</a>
                 </div>
 
                 <div class="search">
@@ -127,58 +127,76 @@
 
                     <div class="items">
                         <div class="item">
+                            <img src="assets/genres/sergei-sushchik-Dyo5xZX687M-unsplash.jpg" alt="">
                             <p>Alternative<br>Country</p>
                         </div>
                         <div class="item">
+                            <img src="assets/genres/ben-white-iPyQg9QfepM-unsplash.jpg" alt="">
                             <p>Blues<br>Country</p>
                         </div>
                         <div class="item">
+                            <img src="assets/genres/israel-palacio-Y20JJ_ddy9M-unsplash.jpg" alt="">
                             <p>Country<br>Rap</p>
                         </div>
                         <div class="item">
+                            <img src="assets/genres/katherine-hanlon-pOraJAwCFRo-unsplash.jpg" alt="">
                             <p>Country<br>Soul</p>
                         </div>
                         <div class="item">
+                            <img src="assets/genres/pexels-mikotoraw-photographer-3769099.jpg" alt="">
                             <p>Country<br>Rock</p>
                         </div>
                         <div class="item">
+                            <img src="assets/genres/priscilla-du-preez-de-HbaYzZqA-unsplash.jpg" alt="">
                             <p>Country<br>Pop</p>
                         </div>
                         <div class="item">
-                            <p>Alternative<br>Country</p>
+                            <img src="assets/genres/pexels-sharefaith-1202723.jpg" alt="">
+                            <p>Americana</p>
                         </div>
                         <div class="item">
-                            <p>Blues<br>Country</p>
+                            <img src="assets/genres/pexels-wolfgang-weiser-17729930.jpg" alt="">
+                            <p>Bluegrass</p>
                         </div>
                         <div class="item">
-                            <p>Country<br>Rap</p>
+                            <img src="assets/genres/tony-pham-T0BqG4PnUdg-unsplash.jpg" alt="">
+                            <p>Honky<br>Tonk</p>
                         </div>
                         <div class="item">
-                            <p>Country<br>Soul</p>
+                            <img src="assets/genres/pexels-elise-bunting-2453636.jpg" alt="">
+                            <p>Cowboy<br>Country</p>
                         </div>
                         <div class="item">
-                            <p>Country<br>Rock</p>
+                            <img src="assets/genres/pexels-noel-mcshane-1036148.jpg" alt="">
+                            <p>Texas<br>Country</p>
                         </div>
                         <div class="item">
-                            <p>Country<br>Pop</p>
+                            <img src="assets/genres/pexels-david-dibert-635699.jpg" alt="">
+                            <p>Christian<br>Country</p>
                         </div>
                         <div class="item">
-                            <p>Alternative<br>Country</p>
+                            <img src="assets/genres/pexels-wendy-wei-1190297.jpg" alt="">
+                            <p>Bro<br>Country</p>
                         </div>
                         <div class="item">
-                            <p>Blues<br>Country</p>
+                            <img src="assets/genres/lucia-macedo-xXLT52bAzkk-unsplash.jpg" alt="">
+                            <p>Outlaw<br>Country</p>
                         </div>
                         <div class="item">
-                            <p>Country<br>Rap</p>
+                            <img src="assets/genres/pexels-pixabay-206648.jpg" alt="">
+                            <p>Neotradtional<br>Country</p>
                         </div>
                         <div class="item">
-                            <p>Country<br>Soul</p>
+                            <img src="assets/genres/pexels-pixabay-235725.jpg" alt="">
+                            <p>Western<br>Swing</p>
                         </div>
                         <div class="item">
-                            <p>Country<br>Rock</p>
+                            <img src="assets/genres/jen-theodore-VgvTHoWmEfY-unsplash.jpg" alt="">
+                            <p>Australian<br>Country</p>
                         </div>
                         <div class="item">
-                            <p>Country<br>Pop</p>
+                            <img src="assets/genres/pexels-tobi-518557.jpg" alt="">
+                            <p>Country<br>Folk</p>
                         </div>
                     </div>
 
