visual pathways for core functions is complete

--- a/public/main.html
+++ b/public/main.html
@@ -126,7 +126,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button><a href="/playlist">View Now</a></button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -216,7 +216,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
@@ -236,14 +236,19 @@
                         <h4>James Arthur</h4>
                         <h5>3:15</h5>
                         <div class="buttons">
-                            <button>Listen Now</button>
+                            <button>View Now</button>
                             <i class='bx bxs-heart' ></i>
                         </div>
                     </div>
                 </div>
             </div>
 
-
+            <section id="pagination">
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#"><i class="bx bx-right-arrow-alt"></i></a>
+            </section>
         </main>
 
         <div class="right-section">
@@ -303,5 +308,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spotify-web-api-node/5.1.1/spotify-web-api-node.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
